# GeoModel

./: .gitignore  CODESPACE_SETUP.md  COMPLETE_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  Project.toml  README.md  SETUP_STATUS.md
examples/: spectral_geometry.jl
julia/examples/: basic_nurbs.jl  spectral_geometry.jl
julia/src/: GeometryNervousSystem.jl  rust_bridge.jl
julia/src/representations/: IntentGraph.jl  SplinePatch.jl
julia/test/: runtests.jl  test_nurbs.jl  test_spectral.jl
rust/geometry-utils/: Cargo.toml
rust/geometry-utils/src/: lib.rs  matrix.rs  vector.rs
rust/nurbs-core/: Cargo.toml
rust/nurbs-core/benches/: evaluation.rs
rust/nurbs-core/src/: basis.rs  derivatives.rs  ffi.rs  lib.rs  surface.rs
rust/tessellation/: Cargo.toml
rust/tessellation/src/: adaptive.rs  lib.rs  triangulation.rs
scripts/: build_rust.sh  setup_environment.sh  verify_rust_only.sh  verify_setup.sh
src/: GeometryNervousSystem.jl
src/geometry/: nurbs.jl
src/representations/: HarmonicForm.jl  SplinePatch.jl  TopologyGraph.jl
test/: runtests.jl  test_nurbs.jl  test_pipeline.jl
