[package]
name = "nurbs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "nurbs_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray.workspace = true
nalgebra.workspace = true
rayon.workspace = true
packed_simd_2.workspace = true
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
approx.workspace = true

[[bench]]
name = "evaluation"
harness = false
