[package]
name = "tessellation"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "tessellation"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray.workspace = true
nalgebra.workspace = true
rayon.workspace = true
libc.workspace = true

[dev-dependencies]
approx.workspace = true
